--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,4 @@
 @import 'base/variables';
-@import 'base/media';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -12,3 +11,8 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feed';
